[gd_scene load_steps=4 format=3 uid="uid://c3an4qnehl8ga"]

[ext_resource type="Texture2D" uid="uid://dnkl2ckxikvtq" path="res://Dialogue/art/NinePatchRect.png" id="1_o4v27"]
[ext_resource type="Script" path="res://Dialogue/BottomDialogueBox.gd" id="1_xwk3p"]
[ext_resource type="SpriteFrames" uid="uid://be8l72qxbjduy" path="res://Dialogue/art/character_frames.tres" id="2_us6tt"]

[node name="BottomDialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xwk3p")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(0, 240)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -128.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_o4v27")
region_rect = Rect2(0, 0, 137, 103)
patch_margin_left = 98
patch_margin_top = 64
patch_margin_right = 98
patch_margin_bottom = 64
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="DialogueEdgeAnchor" type="Control" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 0

[node name="AnimatedPortrait" type="AnimatedSprite2D" parent="NinePatchRect/DialogueEdgeAnchor"]
z_index = -1
position = Vector2(0, 9)
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("2_us6tt")
centered = false
offset = Vector2(0, -512)

[node name="TextAnchor" type="Control" parent="NinePatchRect"]
anchors_preset = 0
offset_left = 50.0
offset_top = 51.0
offset_right = 1102.0
offset_bottom = 188.0

[node name="Dialogue" type="Label" parent="NinePatchRect/TextAnchor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 23
text = "This is a sample dialogue. I wonder how we should handle positioning for text that doesn't fill the entire dialogue box.

With this sizing, we can fit a total of 4 lines. Who knows how well this would work."
autowrap_mode = 2
clip_text = true
max_lines_visible = 4
